cambio de rutas lado admin

--- a/admin.html
+++ b/admin.html
@@ -107,7 +107,7 @@
             
             <!-- Menú de opciones -->
             <div class="d-flex">
-                <a href="/interfaz/ventas.ejs" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Ventas">
+                <a href="/fac-ventas.html"  class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Ventas">
                     <i class="bi bi-shop"></i>
                 </a>
                 <a href="/interfaz/productos.ejs" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Productos">
