feat: se creó la página de metricas utilizando la libreria chart.js

--- a/admin.html
+++ b/admin.html
@@ -116,6 +116,9 @@
                 <a href="/interfaz/clientes.ejs" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
                     <i class="bi bi-people"></i>
                 </a>
+                <a href="/metricas.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
+                    <i class="bi bi-graph-up-arrow"></i>
+                </a>
                 <a href="/interfaz/configuracion.ejs" class="btn btn-outline-light" data-bs-toggle="tooltip" title="Configuración">
                     <i class="bi bi-gear"></i>
                 </a>
