actualizando page metricas.

--- a/metricas.html
+++ b/metricas.html
@@ -128,7 +128,7 @@
 
     <main class="container">
         <div class="container mt-5">
-            <h2 class="text-center">Productos más vendidos</h2>
+            <h2 class="text-center">Productos más vendidos Marzo 2025</h2>
             <canvas id="ventasChart"></canvas>
         </div>        
     </main>
