modificacion de logica, cargar products desde BD.

--- a/productos.html
+++ b/productos.html
@@ -119,20 +119,12 @@
     </nav>
 
     <!-- Tabla de productos -->
-    <table class="table table-hover">
-        <thead class="table-light">
-            <tr>
-                <th>ID</th>
-                <th>Nombre</th>
-                <th>Descripción</th>
-                <th>Cantidad</th>
-                <th>Precio</th>
-                <th>Categoría</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody id="products-table-body"></tbody>
-    </table>
+    <div class="container">
+        <button id="btnVerProductos" class="btn btn-success mb-3">
+            📦 Ver Productos
+        </button>
+    </div>
+    
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="/server/script.js" defer></script>
