eliminacion de error conexion BD

--- a/admin.html
+++ b/admin.html
@@ -107,13 +107,13 @@
             
             <!-- Menú de opciones -->
             <div class="d-flex">
-                <a href="/fac-ventas.html"  class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Ventas">
+                <a href="/fac-ventas.html"  class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Facturar">
                     <i class="bi bi-shop"></i>
                 </a>
                 <a href="/productos.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Productos">
                     <i class="bi bi-box"></i>
                 </a>
-                <a href="/interfaz/clientes.ejs" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
+                <a href="#" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
                     <i class="bi bi-people"></i>
                 </a>
                 <a href="/metricas.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
