--- a/productos.html
+++ b/productos.html
@@ -182,7 +182,7 @@ button {
     <table>
         <thead>
             <tr>
-                <th>ID</th>
+                <th>Código</th>
                 <th>Nombre</th>
                 <th>Descripción</th>
                 <th>Cantidad</th>
