eliminacion de href innecesarios

--- a/admin.html
+++ b/admin.html
@@ -113,15 +113,12 @@
                 <a href="/productos.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Productos">
                     <i class="bi bi-box"></i>
                 </a>
-                <a href="#" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
-                    <i class="bi bi-people"></i>
+             
                 </a>
-                <a href="/metricas.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Clientes">
+                <a href="/metricas.html" class="btn btn-outline-light me-2" data-bs-toggle="tooltip" title="Metricas">
                     <i class="bi bi-graph-up-arrow"></i>
                 </a>
-                <a href="/interfaz/configuracion.ejs" class="btn btn-outline-light" data-bs-toggle="tooltip" title="Configuración">
-                    <i class="bi bi-gear"></i>
-                </a>
+               
             </div>
         </div>
     </nav>
