--- a/fac-ventas.html
+++ b/fac-ventas.html
@@ -51,7 +51,7 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Aquí se agregarán los productos seleccionados -->
+          <!--   productos seleccionados -->
         </tbody>
       </table>
 
