Cambios en funcionalidades

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     onclick="redirectToLogin()">
               <i class="fas fa-sign-in-alt login-icon" aria-hidden="true"></i>
               <div class="login-text">
-                <a href="usuario.html" >Administrador</a>
+                <a href="usuario.html" target="_blank" class="login-link" aria-label="Redirigir al inicio de sesión">Administrador</a>
               </div>
             </button>
           </div>
