cambios en el envio del form index.js

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
     <!------------------------------  INICIO CONFIRMACION DE COMPRA--------------------- -->
     <!------------------------------  INICIO CONFIRMACION DE COMPRA--------------------- -->
-<div class="menu-checkout in-stack is-hidden" inert>
+<div class="menu-checkout in-stack is-hidden" >
     <h2 class="checkout-title">Checkout</h2>
     <div class="checkout-container in-line">
         <div class="form-container">
