--- a/admin.html
+++ b/admin.html
@@ -209,9 +209,11 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-    <script src="server/gestion-productos.js" defer></script>
+    <script src="server/gestion-productos.js" type="module"></script>
     <script src="server/pedido.js"  type="module" defer></script>
-    <script src="server/socket-conection.js" defer></script>
+    <script type="module" src="server/admin-socket.js"></script>
+
+
    
 </body>
 </html>
