añadiendo archivo jsPDF

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     </div>
     <!-------------------------------  FIN MENU CARRITO-------------------------------- -->
 
-    <!------------------------------  INICIO CONFIRMACION DE COMPRA--------------------- -->
+    
     <!------------------------------  INICIO CONFIRMACION DE COMPRA--------------------- -->
 <div class="menu-checkout in-stack is-hidden" >
     <h2 class="checkout-title">Checkout</h2>
@@ -388,6 +388,11 @@
                                 DNI *
                                 <input type="text" placeholder="Ej: 33444555"  id="dni" />
                             </label>
+                            <label for="address">
+                                Dirección *
+                                <input type="text" placeholder="Ej: Av. Siempre Viva 742" id="address" />
+                            </label>
+                            
                         </div>
                     </div>
                 </fieldset>
