--- a/productos.html
+++ b/productos.html
@@ -236,6 +236,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <script src="/libs/jspdf.umd.js"></script>
+
     
     <!-- Nuestro script de pedidos -->
     <script src="server/pedido.js" type="module" defer></script>
