modificacion en pedido.js, funcion generarPdf

--- a/index.html
+++ b/index.html
@@ -389,8 +389,8 @@
                                 <input type="text" placeholder="Ej: 33444555"  id="dni" />
                             </label>
                             <label for="address">
-                                Dirección *
-                                <input type="text" placeholder="Ej: Av. Siempre Viva 742" id="address" />
+                                Ciudad y Dirección 
+                                <input type="text" placeholder="Ej:Venado Tuerto Av.Estrugamou 742" id="address" />
                             </label>
                             
                         </div>
